src/App.css
/* ... */
::-ms-input-placeholder, ::placeholder {
  color:#959596;
} 

::placeholder {
  color:#959596;
  opacity: 1; /* Firefox */
} 

.register-button {
  float: right;
  border-radius: 1em;
  padding: 0.25em 2em;
  border: 1px solid;
  background: none;
}

.register-button.inactive {
  color: grey;
  cursor: default;
}

span.pointer {
  position: absolute;
  animation: point 1s infinite ease-in-out;  
  transform: translateX(0);
  margin-left: 0.25em;
}

@keyframes point {
  0% {transform: translateX(0);}
  66% {transform: translateX(50%);}
  100% {transform: translateX(0);}
}

.captcha-check {
  position: relative;
  width: fit-content;
  margin: 1em 0;
  padding: 1em 0.5em;
  background: #f9f9f9;
  border: 1px solid #dbdcdb;
  border-radius: 3px;
  float: right;
  box-shadow: 0 2px 5px #0000000d;
  label {
    padding-inline: 0.5em;
  }
}

.spinner {
  display: none;
  font-size: 1.5em;
  position: absolute;
  left: 0.5em;
  color: #408def;
  animation: spin 0.5s infinite ease-out;
  top: 0.65em;
  transform: translate(-50%, 0);
}

@keyframes spin {
  0% {transform: rotate(0);}
  100% {transform: rotate(360deg);}
}
#silly-captcha {
  min-width: unset;
  border-radius: 0;
  margin-block: auto;
  max-height: 80%;
  overflow: auto;
}
.captcha-header {
  margin: 0.5em;
  padding: 1.5em 2em;
  background-color: #408def;
  color: white;
  span {
    display: block;
    margin: 0.25em 0;
    font-size: 1.5em;
    font-weight: 700;
  }
}

.captcha-box {
  max-width: 446px;
}
.captcha-box table {
  width: calc(100% - 1em);
  margin: 0.5em;
  display: flex;
  flex-direction: column;
  aspect-ratio: 1;
}

.captcha-box p.credit {
  margin: 1em;
  font-style: italic;
  font-size: 0.6em;
  margin-bottom: 0;
}

.correct .captcha-box table td, .correct .captcha-bottom button {
  background-color: #38ce64;
}

.correct .captcha-box table td {
  border-color: #38ce64;
}

.wrong .captcha-box table td, .wrong .captcha-bottom button {
  background-color: #ef4040;
}

.wrong .captcha-box table td {
  border-color: #ef4040;
}


.wrong .captcha-bottom button {
  transition-duration: 0.1s;
  animation: 0.1s shake infinite;
}

.wrong .captcha-bottom button .wrong, .correct .captcha-bottom button .correct {
  display: block;
}

.wrong .captcha-bottom button .state, .correct .captcha-bottom button .state {
  display: none;
}

.captcha-box table td {
  border: 1px solid rgb(212, 212, 212);
  padding: 0;
  text-align: center;
  background-color: #408def;
  box-sizing: border-box;
  flex-grow: 1;
}
.captcha-box table tr {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}

.captcha-box table td.selected button {
  width: calc(100% - 2em);
  height: calc(100% - 2em);
  top: 1em;
}
.captcha-box table td button {
  border: none;
  background: white;
  
  padding: 1em;
  top: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  font-weight: 600;
  color: #333;
  position: relative;
  transition-duration: 0.75s;
}

.captcha-box table td button mark {
  background-color: rgba(255, 255, 255, 0.8);
  color: #333;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
}

.captcha-bottom {
  display: flex;
  justify-content: space-between;
  font-weight: 600;
}

.captcha-bottom p {
  margin: 0.5em;
  padding: 0.5em 1em;
}

.captcha-bottom button .wrong, .captcha-bottom button .correct {
  display: none;
}

.bold {
  font-weight: 800;
}

.bold .hideonbold {
  display: none;
}

.captcha-bottom button {
  background-color: #408def;
  margin: 0.5em;
  padding: 0.5em 1em;
  border-radius: 3px;
  border: none;

  color: white;
  font-weight: 600;
}

.timetable {
  width: 1000px;
  max-width: 100%;
  overflow: clip;
  position: relative;
  height: 500px;
  margin: auto;
  border-radius: 1em;
  filter: drop-shadow(0 2px 5px #00000036);
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: end;
}

.timetable p {
  user-select: none;
}

.courseCard {
  background-color: #e6ebed;
  padding: 0.5em;
  border-radius: 0.5em;
}

.timetable svg {
  margin: 1em auto;
}
.timetable path {
  fill: transparent;
}
.timetable text {
  font-size: 2.84em;
  font-weight: 900;
  fill: #f29110;
}

.ezekiel {
  left: 0;
  right: 0;
  position: absolute;
  top: 0;
  bottom: 0;
}

.confetti {
  width: 50px;
  height: 10px;
  background-color: red;
  
  z-index: 500;
}

.confetti.blue {
  background-color: #005CB9;
}

.confetti.gold {
  background-color: #F38B00;
}

.confetti.white {
  background-color: white;
}


#confettitwall {
  position: fixed;
  top: 64px;
}

.hooray footer a {
  z-index: 600;
  position: relative;
}

.timetable p {
  margin-inline: 1em;
  margin-bottom: 1em;
  z-index: 10;
}

.timetable a {
  color: #0071c9;
  text-decoration: none;
  border-bottom: 1px solid;
}

.jerkday {
  font-size: 2em;
  font-weight: 600;
  color: purple;
}

.workedtheday {
  width: 500px;
}

.me {
  width: 600px;
}

.finances {
  display: flex;
  gap: 1em;
  flex-wrap: wrap;
}
.finances .section-box {
  position: relative;
  height: fit-content;
  min-height: 0;
}

.finances .section-box h2, .finances .section-box a {
  font-weight: 400;
  color: #393939;
  text-decoration: none;
}
.finances .section-box h2 {
  margin: 0.5em;
}

.finances .section-box a:hover {
  text-decoration: underline;
}

.nowrap {
  white-space: nowrap;
}

@media only screen and (min-width: 600px) {
  .only-mobile {
    display: none;
  }
  .only-desktop {
    display: block;
  }
}
/* ... */

